# BrainrotBench.com

./: .gitignore  brainrot.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  update-models-procedure.sql
app/: actions.ts  globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/leaderboard/: page.tsx
components/: animated-background.tsx  comparison-view.tsx  error-boundary.tsx
contexts/: models-context.tsx
lib/: brainrot.ts  elo.ts  models.ts  supabase.ts
public/: summary.json
